tests/semantic_errors/test23_3.tl
-- test case 2.
-- Description : lexical error

-- Expected : '1'
1234.errequire "ifj21" 

